# PE-Hackathon-Template-2026

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.lb.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  loadtest.js  nginx.conf  nginx.local.conf  pyproject.toml  run.py  scaler.py
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  database.py  logging_config.py  metrics.py  models.py  redis_client.py  short_link_cache.py
app/models/: __init__.py  schema.py
app/routes/: __init__.py  events.py  url_shortener.py  urls.py  users.py
app/static/: app.js  styles.css
app/templates/: index.html
csv_data/: events.csv  urls.csv  users.csv
docs/: API.md  BottleneckAnalysis.md  README.md  api-docs.md  capacityPlan.md  decision-log.md  deploy-guide.md  endpoints.md  failure-modes.md  in-case-of-emergency.md  troubleshooting.md
k6/: load.js
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: watchtower-golden-signals.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alert-rules.yml  prometheus.yml
nginx/certs/: README.txt  fullchain.pem  privkey.pem
scripts/: consume-kafka-logs.sh  create-kafka-topic.sh  deploy.sh  run-loadtest.sh  startdb.sh  stopdb.sh  stream-logs-to-kafka.sh
tests/: conftest.py  test_app.py
